--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
 				<version>${junit.version}</version>
-				<scope>test</scope>
+				<!-- <scope>test</scope> -->
 			</dependency>
 			<!-- 日志处理 -->
 			<dependency>
